deployment/tekton-cart/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-cart-pro
  labels:
    app: tekton-cart-app
