deployment/tekton-cart/02-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: tekton-cart-deployment
  namespace: tekton-cart-pro
  labels:
    app: tekton-cart-app
    name: tekton-cart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-cart-app
      name: tekton-cart-deployment
  template:
    metadata:
      labels:
        app: tekton-cart-app
        name: tekton-cart-deployment
    spec:
      containers:
        - name: tekton-cart-deployment
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
