deployment/tekton-cart/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-cart-route
  namespace: tekton-cart-pro
  labels:
    app: tekton-cart-app
spec:
  host: tekton-cart-app.tekton-cart-pro.apps.ganwhite.os.fyre.ibm.com
  path: /
  to:
    kind: Service
    name: tekton-cart-service
    weight: 100
  port:
    targetPort: http
